New Development: No             JIRA Issue:         Ready for Test: Yes      Interface Changes: No What Interface Changed:          Test Programs:   Put in Release Notes: No              Module(s):            Description: modifications to use proper libcomponents.so.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set( SRCDIR ${ASAPROOT}/src )
 # include path
 include_directories( ${SRCDIR} 
                      ${Boost_INCLUDE_DIR}
+                     ${COMPONENTS_INCLUDE_DIR}
                      ${ASAPROOT}/external-alma 
                      ${ASAPROOT}/external/libpyrap/pyrap-0.3.2 )
 
@@ -136,7 +137,8 @@ target_link_libraries( ${ASAPLIB}
                        ${PYRAPLIB} 
                        ${ATNFLIB} 
                        #${CASACORE_LIBRARIES} 
-                       ${WCSLIB} )
+                       ${WCSLIB} 
+                       ${COMPONENTS_LIBRARY} )
 target_link_libraries( ${ASAPPYLIB} 
                        ${ASAPLIB} )
 
