Remove reference to libpryap (scons). use casacore_python from now on

--- a/external-alma/SConscript
+++ b/external-alma/SConscript
@@ -5,10 +5,10 @@ sources = []
 sources += glob.glob("atnf/PKSIO/*.cc")
 sources += glob.glob("atnf/pks/pks_maths.cc")
 
-#sources2 = glob.glob("components/SpectralComponents/*.cc")
+sources2 = glob.glob("components/SpectralComponents/*.cc")
 
 env.AppendUnique(CPPPATH=[Dir(".").abspath])
 atnflib=env.Library("atnf", sources)
-#complib=env.Library("oldcomponents", sources2)
+complib=env.Library("oldcomponents", sources2)
 env.AppendUnique(LIBPATH=[Dir(".").abspath])
-env.Prepend(LIBS=["atnf"])#,"oldcomponents"])
+env.Prepend(LIBS=["atnf","oldcomponents"])
