New Development: Yes             JIRA Issue: Yes (CAS-7383))         Ready for Test: Yes      Interface Changes: No What Interface Changed:          Test Programs:   Put in Release Notes: No              Module(s): asap            Description: use libcasa_python instead of pyrap in cmake.

--- a/external-alma/asdm2ASAP/CMakeLists.txt
+++ b/external-alma/asdm2ASAP/CMakeLists.txt
@@ -17,7 +17,7 @@ set( EXEC_SRC ASDMReader.cc
 add_executable( ${ASDM2ASAP} ${EXEC_SRC} )
 
 # dependencies
-target_link_libraries( ${ASDM2ASAP} ${ASDM_LIBRARY}
+target_link_libraries( ${ASDM2ASAP} ${Boost_LIBRARIES} ${ASDM_LIBRARY}
                                     ${ASAPLIB} )
 add_dependencies( inst ${ASDM2ASAP} )
 
