--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -705,7 +705,8 @@ endif()
 set( ASAPPYLIB _asap )
 set( ASAPLIB asap )
 #set( PYRAPLIB pyrap )
-set( ATNFLIB atnf )
+#set( ATNFLIB atnf )
+set( ATNFLIB atnf_asap )
 set( ASAP2TO3 asap2to3 )
 if ( NOT STANDALONE )
 #   set( ASDM2ASAP_OLD oldasdm2ASAP )
