New Development: No             JIRA Issue: No         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: build asap without explicitly specifying CXX11 option   Put in Release Notes: No              Module(s): cmake build of asap            Description: Changed the default value of a CMake flag, CXX11, from NO to YES. By this change, CXX11 support is activated by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@
 cmake_minimum_required( VERSION 2.8 )
 
 # options
-option (CXX11 "Compile as C++11 if possible" NO)
+option (CXX11 "Compile as C++11 if possible" YES)
 
 option( USE_LIBCASACORE 
         "set ON to use libcasacore.so instead of libcasa_*.so"
@@ -17,6 +17,7 @@ option( STANDALONE
 option( PKSMS
         "set ON to diable to build PKSMS2reader/writer"
         OFF )
+message( STATUS "CXX11 = " ${CXX11} )
 message( STATUS "USE_LIBCASACORE = " ${USE_LIBCASACORE} )
 message( STATUS "STANDALONE = " ${STANDALONE} )
 message( STATUS "PKSMS = " ${PKSMS} )
