New Development: No             JIRA Issue: Yes CAS-7917         Ready for Test: Yes      Interface Changes: Yes What Interface Changed: No          Test Programs: test_importasdm, test_importasdm_mms, alma-m100-analysis-regression, alma-m100-sd-regression   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
  The cmake setting for asap is changed to ignore building asdm2ASAP. Additional dependency on libxml2 and libalma, which is required for asdm2ASAP, is also removed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -726,10 +726,10 @@ set( ASAPLIB asap )
 #set( ATNFLIB atnf )
 set( ATNFLIB atnf_asap )
 set( ASAP2TO3 asap2to3 )
-if ( NOT STANDALONE )
+#if ( NOT STANDALONE )
 #   set( ASDM2ASAP_OLD oldasdm2ASAP )
-   set( ASDM2ASAP asdm2ASAP )
-endif()
+#   set( ASDM2ASAP asdm2ASAP )
+#endif()
 
 #
 # always install by default
