New Development: Yes             JIRA Issue: Yes (CAS-8172)         Ready for Test: Yes      Interface Changes: No What Interface Changed:          Test Programs: build asap   Put in Release Notes: No              Module(s): asap            Description: Added a search path for python to support build on OpenSUSE.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -399,6 +399,7 @@ else()
          numpy/npy_interrupt.h   # for numpy
       INCLUDES_SUFFIXES python${PYTHONV}
       PREFIX_HINTS
+         ${NUMPY_ROOT_DIR}
          ${python_prefix}/lib/python${PYTHONV}/site-packages/numpy/core
          ${python_prefix}/Library/Frameworks/Python.framework/Versions/${PYTHONV}
          ${python_prefix}/Library/Frameworks/Python.framework/Versions/${PYTHONV}/lib/python${PYTHONV}/site-packages/numpy/core
