New Development: No             JIRA Issue: No         Ready for Test: Yes      Interface Changes: No What Interface Changed:          Test Programs:   Put in Release Notes: No              Module(s): build of asap            Description: added a search path of aipsdef.h based on the request by Darrell.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,7 +225,7 @@ if( NOT USE_LIBCASACORE )
    # use casacore libraries 
    set( _includename casa/aipsdef.h )
    find_path( CASACORE_INCLUDE_DIR ${_includename}
-              PATHS ${CASACORE_PATHS}
+              PATHS ${CASACORE_PATHS} ${CMAKE_INSTALL_PREFIX}
               PATH_SUFFIXES include include/casacore
               NO_DEFAULT_PATH )
    find_path( CASACORE_INCLUDE_DIR ${_includename} ) 
