New Development: No             JIRA Issue: Yes (CAS-9275)         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: functional tests of ASAP tasks   Put in Release Notes: No              Module(s): asap            Description: Committing a change to CMakeLists.txt from Darrell.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -701,9 +701,9 @@ set( LIB_INSTALL_DIR lib )
 set( PYTHON_INSTALL_DIR python/${PYTHONV}/asap )
 set( SHARED_INSTALL_DIR share/asap )
 if( NOT STANDALONE )
-   if( EXISTS ${CMAKE_INSTALL_PREFIX}/python${PYTHONV} )
-      message( STATUS "adjusting PYTHON_INSTALL_DIR to python${PYTHONV}/asap" )
-      set( PYTHON_INSTALL_DIR python${PYTHONV}/asap )
+   if( EXISTS ${CMAKE_INSTALL_PREFIX}/lib/python${PYTHONV} )
+      message( STATUS "adjusting PYTHON_INSTALL_DIR to lib/python${PYTHONV}/asap" )
+      set( PYTHON_INSTALL_DIR lib/python${PYTHONV}/asap )
    endif()
 endif()
 
