Include bin when compiling against casacore2
Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -5,8 +5,7 @@
 # executables
 set( ASAP_EXEC
      asap
-     asap_update_data
-     install )
+     asap_update_data)
 
 install( PROGRAMS ${ASAP_EXEC} 
          DESTINATION ${EXEC_INSTALL_DIR} )
