Finding pgplot needs an additional cmake file
The non-casacore2 build uses the casa_find() macro provided by casa. If we're
compiling against casacore/casarest then we need to provide our own
FindPGPLOT.cmake file. It currently is very simple but serves its purpose.

Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -626,9 +626,7 @@ if( NOT STANDALONE )
   endif()
 
   if( CASACORE2 )
-     find_package( PGPLOT 5.3.1
-       HINTS ${PGPLOT_ROOT_DIR}
-		 COMPONENTS ${_deps} )
+     find_package( PGPLOT )
   else()
      casa_find( PGPLOT
        VERSION 5.3.1
